[tool.poetry]
name = "geomockimages"
version = "0.2.4"
description = "A module to programmatically create geotiff images which can be used for unit tests."
authors = ["Markus Müller <markus.u.mueller@zoho.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/markusuwe/geomockimages"
repository = "https://github.com/markusuwe/geomockimages"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
rasterio = "^1.3.10"
rio-cogeo = "^5.3.0"
scikit-image = "^0.23.2"
scipy = "^1.13.0"

[tool.poetry.group.dev.dependencies]
coverage-badge = "^1.1.1"
mypy = "^1.10.0"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-mypy = "^0.10.3"
pytest-ruff = "^0.3.2"
pre-commit = "^3.7.1"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
